--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="login">Имя пользователя</string>
     <string name="add_server">Добавить сервер</string>
     <string name="server_name">Имя сервера</string>
+    <string name="victory">ПОБЕДА</string>
 </resources>
