--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="login">Nickname</string>
     <string name="add_server">Add server</string>
     <string name="server_name">Server name</string>
+    <string name="victory">VICTORY</string>
 </resources>
